# taste-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: GETTING_STARTED.md  INTEGRATION.md  TASTE_SPEC_FORMAT.md
examples/full/: taste.md  taste.vision
examples/minimal/: taste.md
src/taste_agent/: __init__.py  version.py
src/taste_agent/cli/: diff_cmd.py  evolve_cmd.py  explain_cmd.py  gate_cmd.py  init_cmd.py  lint_cmd.py  main.py  scan_cmd.py
src/taste_agent/core/: config.py  memory.py  taste_agent.py  verdict.py
src/taste_agent/evaluators/: __init__.py  adherence.py  aesthetic.py  api_design.py  architecture.py  code_style.py  coherence.py  copy.py  naming.py  ux.py
src/taste_agent/integration/: __init__.py  mcp_server.py  playwright_live.py
src/taste_agent/memory_store/: __init__.py  file_store.py  sqlite_store.py
src/taste_agent/models/: evaluation.py  persona.py  severity.py  taste_spec.py
src/taste_agent/prompts/: __init__.py  taste_system.py  verdict_prompt.py
src/taste_agent/utils/: __init__.py  diff.py  markdown.py
tests/: conftest.py
tests/test_cli/: test_diff.py  test_evolve.py  test_explain.py  test_gate.py  test_init.py  test_lint.py  test_scan.py
tests/test_core/: test_config.py  test_memory.py  test_taste_agent.py  test_verdict.py
tests/test_evaluators/: test_adherence.py  test_aesthetic.py  test_api_design.py  test_architecture.py  test_code_style.py  test_coherence.py  test_copy.py  test_naming.py  test_ux.py
tests/test_integration/: test_mcp_server.py
tests/test_models/: test_evaluation.py  test_persona.py  test_severity.py  test_taste_spec.py
