[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme>=22.5.0"]
build-backend = "hatchling.build"

[project]
name = "taste-agent"
version = "0.1.0"
description = "Adversarial design director for AI coding agents — taste.md + taste.memory"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "ForgeGod Contributors" },
]
keywords = [
    "ai",
    "coding",
    "design",
    "taste",
    "agent",
    "forgegod",
    "ux",
    "copy",
    "aesthetics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Pre-processors",
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
forgegod = [
    "taste-agent[all]",
]
all = [
    "taste-agent[dev]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "ruff>=0.5.0",
    "pre-commit>=3.5.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/waitdeadai/taste-agent"
Documentation = "https://github.com/waitdeadai/taste-agent#readme"
Repository = "https://github.com/waitdeadai/taste-agent"
Issues = "https://github.com/waitdeadai/taste-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/taste_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "C4",
    "SIM",
    "RUF",
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B028",  # no explicit stacklevel — false positive on warnings
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
